[gd_scene load_steps=11 format=2]

[ext_resource path="res://level01/scene/TilesetLaboratory.tres" type="TileSet" id=1]
[ext_resource path="res://characters/Lachano/Lachano.tscn" type="PackedScene" id=2]
[ext_resource path="res://font/NanumPenScript-Regular.tres" type="DynamicFont" id=3]
[ext_resource path="res://sandbox/GameplayTesting.gd" type="Script" id=4]
[ext_resource path="res://shader/low_health.shader" type="Shader" id=5]
[ext_resource path="res://shader/vessel.png" type="Texture" id=6]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/blood_color = Vector3( 0.5, 0.05, 0.1 )
shader_param/grey_intensity = 0.3
shader_param/chromatic_intensity = 0.005
shader_param/blur_base_radius = 15.0
shader_param/overall_intensity = 0.0
shader_param/vessel = ExtResource( 6 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("ViewportContainer/Viewport")

[node name="GameplayTesting" type="Node2D"]
script = ExtResource( 4 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Ground" type="TileMap" parent="ViewportContainer/Viewport"]
material = SubResource( 1 )
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 100 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_tile_origin = 1
cell_y_sort = true
compatibility_mode = true
format = 1
tile_data = PoolIntArray( -1179633, 0, 0, -1179632, 0, 0, -1114099, 0, 0, -1114098, 0, 0, -1114097, 0, 0, -1114096, 0, 0, -1114095, 0, 0, -1048564, 0, 0, -1048562, 0, 0, -1048561, 0, 0, -1048560, 0, 0, -1048558, 0, 0, -983028, 0, 0, -983027, 0, 0, -983026, 0, 0, -983025, 0, 0, -983024, 0, 0, -983023, 0, 0, -983021, 0, 0, -917492, 0, 0, -917491, 0, 0, -917490, 0, 0, -917489, 0, 0, -917488, 0, 0, -917487, 0, 0, -917486, 0, 0, -917484, 0, 0, -851957, 0, 0, -851956, 0, 0, -851955, 0, 0, -851954, 0, 0, -851953, 0, 0, -851952, 0, 0, -851951, 0, 0, -851950, 0, 0, -851949, 0, 0, -851948, 0, 0, -786421, 0, 0, -786420, 0, 0, -786419, 0, 0, -786418, 0, 0, -786417, 0, 0, -786416, 0, 0, -786415, 0, 0, -786414, 0, 0, -786413, 0, 0, -786412, 0, 0, -786411, 0, 0, -720887, 0, 0, -720886, 0, 0, -720885, 0, 0, -720884, 0, 0, -720883, 0, 0, -720882, 0, 0, -720881, 0, 0, -720880, 0, 0, -720879, 0, 0, -720878, 0, 0, -720877, 0, 0, -720876, 0, 0, -720874, 0, 0, -655351, 0, 0, -655350, 0, 0, -655349, 0, 0, -655348, 0, 0, -655347, 0, 0, -655346, 0, 0, -655345, 0, 0, -655344, 0, 0, -655343, 0, 0, -655342, 0, 0, -655341, 0, 0, -655340, 0, 0, -655339, 0, 0, -655338, 0, 0, -655337, 0, 0, -589818, 0, 0, -589817, 0, 0, -589816, 0, 0, -589815, 0, 0, -589814, 0, 0, -589813, 0, 0, -589812, 0, 0, -589811, 0, 0, -589810, 0, 0, -589809, 0, 0, -589808, 0, 0, -589807, 0, 0, -589806, 0, 0, -589805, 0, 0, -589804, 0, 0, -589803, 0, 0, -589802, 0, 0, -589801, 0, 0, -589800, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, -524273, 0, 0, -524272, 0, 0, -524271, 0, 0, -524270, 0, 0, -524269, 0, 0, -524268, 0, 0, -524267, 0, 0, -524266, 0, 0, -524265, 0, 0, -524264, 0, 0, -524263, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -458738, 0, 0, -458737, 0, 0, -458736, 0, 0, -458735, 0, 0, -458734, 0, 0, -458733, 0, 0, -458732, 0, 0, -458731, 0, 0, -458730, 0, 0, -458729, 0, 0, -458728, 0, 0, -458727, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -393204, 0, 0, -393203, 0, 0, -393202, 0, 0, -393201, 0, 0, -393200, 0, 0, -393199, 0, 0, -393198, 0, 0, -393197, 0, 0, -393196, 0, 0, -393195, 0, 0, -393194, 0, 0, -393193, 0, 0, -393192, 0, 0, -393191, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -327663, 0, 0, -327662, 0, 0, -327661, 0, 0, -327660, 0, 0, -327659, 0, 0, -327658, 0, 0, -327657, 0, 0, -327656, 0, 0, -327655, 0, 0, -327654, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -262129, 0, 0, -262128, 0, 0, -262127, 0, 0, -262126, 0, 0, -262125, 0, 0, -262124, 0, 0, -262123, 0, 0, -262122, 0, 0, -262121, 0, 0, -262120, 0, 0, -262119, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 0, 0, -196591, 0, 0, -196590, 0, 0, -196589, 0, 0, -196588, 0, 0, -196587, 0, 0, -196586, 0, 0, -196585, 0, 0, -196584, 0, 0, -196583, 0, 0, -196582, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -131047, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 327681, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 393217, 0, 0, 393219, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 458755, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 655370, 0, 0, 655371, 0, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="Obstacles" type="TileMap" parent="ViewportContainer/Viewport"]
position = Vector2( 0, -16 )
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 128, 100 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_tile_origin = 1
cell_y_sort = true
compatibility_mode = true
format = 1
tile_data = PoolIntArray( -65529, 7, 0, -65517, 7, 0, 12, 10, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="Lachano" parent="ViewportContainer/Viewport/Obstacles" instance=ExtResource( 2 )]
position = Vector2( 958.217, 534.609 )

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/Viewport/Obstacles/Lachano"]
visible = false
current = true
limit_left = -250
limit_top = -250
limit_right = 2400
limit_bottom = 1300
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.13
drag_margin_right = 0.13
editor_draw_drag_margin = true
__meta__ = {
"_editor_description_": ""
}

[node name="Ambience" type="CanvasModulate" parent="ViewportContainer/Viewport"]
material = SubResource( 2 )
color = Color( 0.596078, 0.596078, 0.596078, 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="SceneLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="ShadedScene" type="Sprite" parent="SceneLayer"]
material = SubResource( 3 )
texture = SubResource( 4 )
centered = false

[node name="UiLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UiLayer"]
margin_left = 82.4078
margin_top = 60.5446
margin_right = 246.408
margin_bottom = 208.545
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecreHealthBtn" type="Button" parent="UiLayer/VBoxContainer"]
margin_right = 164.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 3 )
text = "health--"

[node name="IncreHealthBtn" type="Button" parent="UiLayer/VBoxContainer"]
margin_top = 84.0
margin_right = 164.0
margin_bottom = 148.0
custom_fonts/font = ExtResource( 3 )
text = "health++"

[node name="VBoxContainer2" type="VBoxContainer" parent="UiLayer"]
margin_left = 1535.48
margin_top = 75.8946
margin_right = 1855.48
margin_bottom = 319.895
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UiLayer/VBoxContainer2"]
margin_right = 320.0
margin_bottom = 58.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="UiLayer/VBoxContainer2/HBoxContainer"]
margin_right = 23.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
text = "H"

[node name="HealthBar" type="ProgressBar" parent="UiLayer/VBoxContainer2/HBoxContainer"]
margin_left = 33.0
margin_right = 320.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="UiLayer/VBoxContainer2"]
margin_top = 62.0
margin_right = 320.0
margin_bottom = 120.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="UiLayer/VBoxContainer2/HBoxContainer2"]
margin_right = 21.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
text = "B"

[node name="BoneBar" type="ProgressBar" parent="UiLayer/VBoxContainer2/HBoxContainer2"]
margin_left = 31.0
margin_right = 320.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="UiLayer/VBoxContainer2"]
margin_top = 124.0
margin_right = 320.0
margin_bottom = 182.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="UiLayer/VBoxContainer2/HBoxContainer3"]
margin_right = 11.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 3 )
text = "I"

[node name="IntestinalBar" type="ProgressBar" parent="UiLayer/VBoxContainer2/HBoxContainer3"]
margin_left = 21.0
margin_right = 320.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
